fixed lang chooser z-index

--- a/assets/site.css
+++ b/assets/site.css
@@ -20,6 +20,7 @@
 
 .slide {
   height: 90vh;
+  z-index: 0;
 }
 
 .progress {
